# daily-stoic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  database.db-shm  database.db-wal  flake.nix  shell.nix
.sqlx/: query-059f877ff0e4f77659d843db4c4bc523eeedc753b71328dd0f840f6b5c546f3f.json  query-061ccb4b1d2ed912436456b3b83a30fc10dc5e819d7dfc9696db688e7406628a.json  query-135db206db95352f628b8071a32123033bb7d1150764fcf04c5dbb9a9b792c76.json  query-2a6db0b6e770a57865f8d7072b792ef6ad4cbf64cb05cb1a0ed5f10ee5b58600.json  query-2cd4c97535b8559d71cefa8db7197300086980d9e3126008719214c4d89970a3.json  query-38085b91cb64e873a8566ded9c7002e531c7f006526c45508c6bc00ccfd456cf.json  query-3ee1cd418184a5af9b021037f9f961416e81c53aae53e5abdfd7ae4bdee65fa2.json  query-53cfbce2ca74b5bd49e615ecc3f6649e24d6ce4b65f487a910f554aa96c110a3.json  query-59e3fd5fa3774a2d249fd02a682789050cd683286f99ecbc8f7a1d05b10e8f1f.json  query-67fee66030cfd8604d593e1d09624e8f86621b900fe1d5ec0b2a130d12bf9d8b.json  query-8acc69346cd4ccf35bba74249e126bf5e2b4af1f0667d57b8db8c0fd46c467a7.json  query-9c763548fc33e17aa21126be0610a0d1bf395b7cdd24487e4132a4821281943e.json  query-a8f745673096d7615da6ccdbb18a9f130f29698c51bdd821313bdc8824e4939a.json  query-b3b4031bfc7403dca54a57af0615648a64cd7f8e05e43858886b01e91ce32d83.json  query-bd7248fc6e1b1bd94c6cd342702ed844666ef3c238693da45dd234ecaf191b92.json  query-e3f1bd0fa04055dbe16f05bf8d675d2a84ba306e48e30be0b6876082baa8d00b.json  query-e94c292f025e50c06b825743ff02d3c8f13cbdb7fa5b759b0282fbbd709cfe7a.json  query-f78a98f1b5f14c7f60128ff07e8f9b4901141f58dcd4287d91fe39255d8fc807.json  query-fdd21d1e11024ff33beb7c983be5068dd1b44a46f557853af0bce23fb9e1b17b.json  query-ff3a2744100814a5cbe22877385ef33b4202b680fcbf6d60dc14e142d2a8a27f.json
migrations/: 20260531051459_create_invites.sql  20260531051459_create_tokens.sql  20260531055548_create_quotes.sql  20260606030331_create_users.sql  20260607160002_create_login_codes.sql  20260607160002_otps.sql
src/: config.rs  db.rs  email.rs  errors.rs  lib.rs  main.rs  models.rs  schedule.rs  utils.rs
src/api/: mod.rs
src/database/: invites.rs  login_codes.rs  mod.rs  otps.rs  quotes.rs  tokens.rs  users.rs
src/handlers/: login.rs  quotes.rs  settings.rs
src/middleware/: auth.rs  mod.rs  sessions.rs
src/models/: invite.rs  login_code.rs  mod.rs  otp.rs  quote.rs  token.rs  user.rs
src/routes/: invite.rs  login.rs  mod.rs  quote.rs  quotes.rs  register.rs  root.rs  settings.rs  token.rs
src/services/: db.rs
templates/: base.html
templates/auth/: expired.html
templates/email/: login_code.html  quote.html  register_alert.html
templates/errors/: message_sent.html  page.html  send_error.html
templates/login/: code.html  page.html  resend_code.html  verify.html  verify_error.html  verify_resend_ok.html
templates/register/: dead_end.html  error.html  ok.html  page.html  page_email_taken.html
tests/: api_tests.rs
(+19 files in other folders)
