[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev

[package]
name = "daily-stoic"
version = "0.1.0"
edition = "2024"
default-run = "daily-stoic"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
rand = "0.10.1"
rust-otp = { version = "3.0.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "any", "sqlite", "time"] }
time = { version = "0.3.47", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
