[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev

[package]
name = "daily-stoic"
version = "0.1.0"
edition = "2024"
default-run = "daily-stoic"

[dependencies]
askama = "0.16.0"
chrono = "0.4"
chrono-tz = "0.10"
axum = "0.8.6"
dotenvy = "0.15.7"
governor = "0.10.4"
rand = "0.10.1"
resend-rs = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "any", "sqlite", "time", "uuid"] }
time = { version = "=0.3.47", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = [
    "add-extension",
    "auth",
    "compression-full",
    "cors",
    "fs",
    "limit",
    "trace",
] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }
dashmap = "6.2.1"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
